<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/svTrucks"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/tlBuss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus241s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus241mod" />

                <Button
                    android:id="@+id/bAdd241"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus231s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus231mod" />

                <Button
                    android:id="@+id/bAdd231"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus205s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus205mod" />

                <Button
                    android:id="@+id/bAdd205"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus103s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus103mod" />

                <Button
                    android:id="@+id/bAdd103"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus256s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus256mod" />

                <Button
                    android:id="@+id/bAdd256"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus251s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus251mod" />

                <Button
                    android:id="@+id/bAdd251"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus226s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus226mod" />

                <Button
                    android:id="@+id/bAdd226"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus203s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus203mod" />

                <Button
                    android:id="@+id/bAdd203"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus206s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus206mod" />

                <Button
                    android:id="@+id/bAdd206"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus171s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus171mod" />

                <Button
                    android:id="@+id/bAdd171"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus152s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus152mod" />

                <Button
                    android:id="@+id/bAdd152"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus107s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus107mod" />

                <Button
                    android:id="@+id/bAdd107"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:src="@drawable/bus105s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/bus105mod" />

                <Button
                    android:id="@+id/bAdd105"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>